--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <section class="container">
             <nav class="navbar bg-light">
                 <div class="container-fluid">
-                    <a class="navbar-brand">Navbar</a>
+                    <a class="navbar-brand fw-bold fs-3">News<span class="text-warning">24</span></a>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
+                        <button class="btn btn-outline-success me-2" type="submit">Home</button>
+                        <button class="btn btn-outline-success" type="submit">Blog</button>
                     </form>
                 </div>
             </nav>
