category bar done

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </section>
     </header>
     <main>
-        <section>
-            <div id="news-category"></div>
+        <section class="container">
+            <div id="news-category" class="d-flex justify-content-between"></div>
         </section>
-        <section>
+        <section class="container">
             <div id="news-list" class="card mb-3">
                 <div class="row g-0">
                     <div class="col-md-4">
