--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             -webkit-box-orient: vertical;
             white-space: normal;
         }
+
+        .small {
+            width: 5%;
+            height: 5%;
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
