item count for news done

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <section class="container">
             <div id="news-category" class="d-flex justify-content-between"></div>
         </section>
+        <section class="container my-4">
+            <div class="bg-white text-dark">
+                <h3 id="itemNumber"></h3>
+            </div>
+        </section>
         <section class="container">
             <div id="news-list" class="mt-5">
             </div>
