question and answer part done

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                     <a class="navbar-brand fw-bold fs-3">News<span class="text-warning">24</span></a>
                     <form class="d-flex" role="search">
                         <button class="btn btn-outline-success me-2" type="submit">Home</button>
-                        <button class="btn btn-outline-success" type="submit">Blog</button>
+                        <button class="btn btn-outline-success text-decoration-none" type="submit"><a href="answer.html"
+                                target="_blank">Blog</a></button>
                     </form>
                 </div>
             </nav>
