--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
     <header>
+        <!-- Navbar start here -->
         <section class="container">
             <nav class="navbar bg-light">
                 <div class="container-fluid">
@@ -41,9 +42,11 @@
         </section>
     </header>
     <main>
+        <!-- news Category section, all buttons added here -->
         <section class="container">
             <div id="news-category" class="d-flex justify-content-between"></div>
         </section>
+
         <section class="container my-4">
             <div class="bg-white text-dark">
                 <h3 id="itemNumber"></h3>
@@ -53,6 +56,7 @@
             <div id="news-list" class="mt-5">
             </div>
         </section>
+        <!-- toggle spinner start here -->
         <section id="loading" class="d-none">
             <div class="text-center">
                 <div class="spinner-border" role="status">
@@ -61,9 +65,7 @@
             </div>
         </section>
         <section>
-            <!-- Button trigger modal -->
-
-            <!-- Modal -->
+            <!-- Modal start here-->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="newsDetail" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
